fixed circle size on mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -63,7 +63,7 @@
     }
   
     .col{
-        width: 100%;
+        width: 60%;
     }
   
     #footer-content {
