--- a/styles/style.css
+++ b/styles/style.css
@@ -74,10 +74,10 @@ html, body {
 
 .booksImg{
   position: absolute;
-  width: 120px;
-  height: 100px;
-  left: 320px;
-  top: 15px;
+  width: 80px;
+  height: 80px;
+  left: 350px;
+  top: 30px;
 }
 
 .contact-num{
@@ -134,13 +134,6 @@ html, body {
   top: 230px;
 }
 
-.cma{
-
-}
-.cma-levels{
-  font-size: 120%;
-  margin:0;
-}
 /************* BODY END ****************/
 
 /********** footer start **************/
